--- a/css/styles.css
+++ b/css/styles.css
@@ -341,20 +341,20 @@ section {
 
 /* Header Section Styling */
 #home {
-  background: #d90647; /* Old browsers */
+  background: #c83023; /* Old browsers */
   background: -moz-linear-gradient(
     top,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
     top,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(
     to bottom,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d90647', endColorstr='#eb402c',GradientType=0 ); /* IE6-9 */
@@ -398,7 +398,7 @@ nav {
   background-color: #fff;
   z-index: 500;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-  color: #d90647;
+  color: #c83023;
   padding: 10px 40px;
   transition: 0.3s;
 }
@@ -412,7 +412,7 @@ nav {
 }
 
 .sticky #navbar ul li a:hover {
-  color: #d90647;
+  color: #c83023;
 }
 
 .sticky .navbar {
@@ -451,7 +451,7 @@ nav {
   background-color: #ffffff;
   z-index: 9999;
   overflow: hidden;
-  color: #d90647;
+  color: #c83023;
   transition: 0.3s;
   text-align: center;
 }
@@ -474,7 +474,7 @@ nav {
 }
 
 .overlay-content a:hover {
-  color: #d90647;
+  color: #c83023;
 }
 /* End: Mobile Menu Styling */
 
@@ -549,20 +549,20 @@ nav {
   z-index: 99; /* Make sure it does not overlap */
   border: none; /* Remove borders */
   outline: none; /* Remove outline */
-  background: #d90647; /* Old browsers */
+  background: #c83023; /* Old browsers */
   background: -moz-linear-gradient(
     top,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
     top,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(
     to bottom,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d90647', endColorstr='#eb402c',GradientType=0 ); /* IE6-9 */
@@ -682,20 +682,20 @@ nav {
 
 /* How To Section Styling */
 #howto {
-  background: #d90647; /* Old browsers */
+  background: #c83023; /* Old browsers */
   background: -moz-linear-gradient(
     top,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
     top,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(
     to bottom,
-    #d90647 37%,
+    #c83023 37%,
     #eb402c 98%
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d90647', endColorstr='#eb402c',GradientType=0 ); /* IE6-9 */
